force-app/main/default/objects/Residential_Visits__c/Residential_Visits__c.object-meta.xml
<CustomObject>
    <label>Residential Visits</label>
    <nameField>
        <displayFormat>RV-{00000}</displayFormat>
        <label>Residential Visits ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residential Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>