force-app/main/default/objects/Residential_Visits__c/fields/Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Needs Required</label>
    <type>Checkbox</type>
</CustomField>