force-app/main/default/objects/Residential_Visits__c/fields/Special_Needs_Groups__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Groups__c</fullName>
    <label>Special Needs Groups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal and Torres Strait Islander</fullName>
            </value>
            <value>
                <fullName>Culturally and Linguistically Diverse</fullName>
            </value>
            <value>
                <fullName>Live in Rural or Remote Areas</fullName>
            </value>
            <value>
                <fullName>Care-Leavers</fullName>
            </value>
            <value>
                <fullName>Lesbian, Gay, Bisexual, Transgender and Intersex</fullName>
            </value>
            <value>
                <fullName>Other Special Needs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>